Изменены элементы фор, внесены другие правки

--- a/src/sass/base/_layout.sass
+++ b/src/sass/base/_layout.sass
@@ -17,7 +17,7 @@ html
 body
   min-width: $layout-page-min-width
   +font-normal
-  +font($font-size, $line-height)
+  +font-size($font-size, $line-height)
   color: $text-color
   background: $bg-color url(../../img/empty.png) no-repeat left top fixed
 
