--- a/src/sass/components/_components.sass
+++ b/src/sass/components/_components.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/* === Helper classes ==
+/* helper classes
 .mark
   color: $mark-color
 
@@ -46,7 +46,9 @@
   +media('>=mob')
     display: none
 
-/* === HEADER ===
+/* ====================================
+/* ============== HEADER ==============
+/* ====================================
 .header
   background-color: rgba(lightgreen, 0.8)
 
@@ -75,7 +77,9 @@
 
 /* logo end
 
-/* === NAVIGATION ===
+/* ====================================
+/* ============ NAVIGATION ============
+/* ====================================
 .nav
   position: relative
 
@@ -138,14 +142,9 @@
     left: 100%
 
 
-/* === CONTENT ===
-.main
-  position: relative
-
-.content
-  background-color: rgba(whitesmoke, 0.8)
-
-/* === FOOTER ===
+/* ====================================
+/* ============= FOOTER ===============
+/* ====================================
 .footer
   position: relative
   //z-index: 5
@@ -249,4 +248,11 @@
 
 /* developer end
 
-/* === MAIN ===
+/* ====================================
+/* ============== MAIN ================
+/* ====================================
+.main
+  position: relative
+
+.content
+  background-color: rgba(whitesmoke, 0.8)
