--- a/src/sass/components/_images-slider.sass
+++ b/src/sass/components/_images-slider.sass
@@ -125,7 +125,7 @@
   padding: 0 90px
 
 .flashes__item, .images-slider__item .caption
-  +font(1.4rem, 1.5)
+  +font-size(1.4rem, 1.5)
   color: $text-color-light
 
   & > *:last-child
