--- a/src/sass/components/_user-options.sass
+++ b/src/sass/components/_user-options.sass
@@ -74,7 +74,7 @@ $uo-border-radius: 0 0 7px 7px
       left: 0
       top: 100%
       margin-top: 2px
-      +font(1.2rem, 2rem)
+      +font-size(1.2rem, 2rem)
       text-align: center
       letter-spacing: normal
       white-space: nowrap
