--- a/src/sass/forms/_captcha.sass
+++ b/src/sass/forms/_captcha.sass
@@ -20,7 +20,7 @@
     width: 180px
     max-width: 50%
     margin-right: $space-right
-    +font(12px, round-float(16/12, 2))
+    +font-size(12px, round-float(16/12, 2))
     letter-spacing: $letter-spacing
 
     & + input
@@ -31,7 +31,7 @@
       margin: 0
 
   .captcha-refresh
-    +font(14px, round-float(18/14, 2))
+    +font-size(14px, round-float(18/14, 2))
     letter-spacing: $letter-spacing
     margin-bottom: 0.5em
 
