--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -4,14 +4,14 @@
 @import utils/mixins
 @import utils/placeholders
 
-///*======================================================*/
-///* FONTS
-///*======================================================*/
+///* ====================================
+///* =============== FONTS ==============
+///* ====================================
 //@import fonts/fonts
 
-/*======================================================*/
-/* NORMALIZE AND RESET
-/*======================================================*/
+/* ====================================
+/* ======== NORMALIZE AND RESET =======
+/* ====================================
 //=== normalize ===
 ///* normalize
 @import ../_temp/normalize/import-now
@@ -25,23 +25,21 @@
 @import base/oldie
 @import base/nojs
 
-/*======================================================*/
-/* LAYOUT
-/*======================================================*/
+/* ====================================
+/* ============== LAYOUT ==============
+/* ====================================
 @import base/layout
 
-/*======================================================*/
-/* TYPOGRAPHY
-/*======================================================*/
+/* ====================================
+/* ============ TYPOGRAPHY ============
+/* ====================================
 @import base/typography
-/* === BUTTON ===
 @import base/buttons
-/* === FORM'S ELEMENTS ===
 @import forms/forms
 
-/*======================================================*/
-/* COMMON
-/*======================================================*/
+/* ====================================
+/* ============ COMPONENTS ============
+/* ====================================
 @import components/breadcrumbs
 @import components/user-form
 @import components/sliders-vendor
@@ -53,7 +51,7 @@
 
 @import components/components
 
-/*======================================================*/
-/* PRINT VERSION
-/*======================================================*/
-@import print/print
+///* ====================================
+///* =========== PRINT VERSION ==========
+///* ====================================
+//@import print/print
