--- a/src/sass/test-mixins.sass
+++ b/src/sass/test-mixins.sass
@@ -148,10 +148,10 @@
   background-color: white
 
   .mx-font--01
-    +font(1.4rem, 1.5)
+    +font-size(1.4rem, 1.5)
 
   .mx-font--02
-    +font(1.7rem, 1.8)
+    +font-size(1.7rem, 1.8)
 
   .mx-font--03
-    +font(2.1rem, 1.2)
+    +font-size(2.1rem, 1.2)
