--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -65,7 +65,7 @@
 ///
 /// @example Sass - Использование
 /// .foo
-///   +font(1.4rem, 1.5)
+///   +font-size(1.4rem, 1.5)
 ///
 /// @example css - Вывод CSS
 /// .foo {
@@ -73,7 +73,7 @@
 ///   line-height: 1.5;
 /// }
 
-=font($font-size: inherit, $line-height: inherit)
+=font-size($font-size: inherit, $line-height: inherit)
   font-size: $font-size
   line-height: $line-height
 
