--- a/src/sass/base/_buttons.sass
+++ b/src/sass/base/_buttons.sass
@@ -2,233 +2,81 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-[class|="btn"], [class*=" btn-"], input[type="submit"], input[type="button"], input[type="reset"], button
+/* btn-def
+.btn-def
+  $btn-font-size: 1.4rem
+  $btn-line-height: 1.8rem
+  $btn-letter-spacing: 0.2em
+  $btn-border-width: 0.2rem
+  $btn-space-inner-vertical: round-float(($btn-height - $btn-line-height - $btn-border-width * 2) / 2, 1)
+  $btn-space-inner-horizontal: $btn-space-inner-vertical * 2
   display: inline-block
   vertical-align: top
   position: relative
-  text-align: center
-  text-decoration: none
-  cursor: pointer
-
-[class|="btn"], [class*=" btn-"]
-  & input[type="submit"], & input[type="button"], & input[type="reset"]
-    background: url("../../img/empty.png") repeat
-    display: block
-    +cover-abs()
-    padding: 0
-    border: none
-    z-index: 99
-    opacity: 0
-
-/* btn-default
-[class*="btn-default"]
-  position: relative
-  +font-bold
-  text-transform: uppercase
-  color: $btn-text-color
-  padding: 14px 38px
-  border: 2px solid transparent
-  background: $btn-bg-color
-  box-shadow: none
   margin: 0
+  padding: #{$btn-space-inner-vertical} #{$btn-space-inner-horizontal}
+  color: $btn-text-color
+  text-transform: uppercase
+  text-decoration: none
+  text-align: center
+  cursor: pointer // Для input-елементов
+  border: $btn-border-width solid transparent
+  background-color: $btn-bg-color
+  box-shadow: none
+  user-select: none
+  -webkit-tap-highlight-color: transparent
 
   &, & > span
-    +font(14px, 18px)
-    letter-spacing: 0.2em
+    +font-size($btn-font-size, $btn-line-height)
+    letter-spacing: $btn-letter-spacing
 
-  // hover
-  .no-touchevents &:hover
-    background-color: $btn-bg-hover-color
+  // Hover
+  &:hover
+    .no-touchevents &
+      background-color: $btn-bg-hover-color
 
-  // disabled
+  // Disabled
   &:disabled, &.disabled, &[data-disabled]
-    cursor: default
-    background-color: $btn-disabled-color !important
+    +btn-disabled()
 
-    &::before, &::after
-      display: none
+/* btn-def end
 
-/* btn-default end
-
-/* btn-default-alt
-.btn-default-alt
+/* btn-alt
+.btn-alt
+  $btn-font-size: 1.4rem
+  $btn-line-height: 1.8rem
+  $btn-letter-spacing: 0.2em
+  $btn-border-width: 0.2rem
+  $btn-space-inner-vertical: round-float(($btn-height - $btn-line-height - $btn-border-width * 2) / 2, 1)
+  $btn-space-inner-horizontal: $btn-space-inner-vertical * 2
+  display: inline-block
+  vertical-align: top
+  position: relative
+  margin: 0
+  padding: #{$btn-space-inner-vertical} #{$btn-space-inner-horizontal}
   color: $btn-bg-color
-  border: 2px solid $btn-bg-color
-  background: $btn-text-color
-
-  .no-touchevents &:hover
-    background: $btn-bg-color
-    color: $btn-text-color
-
-  &:disabled, &.disabled, &[data-disabled]
-    cursor: default
-    background-color: white !important
-    border-color: $btn-disabled-color !important
-    color: $btn-disabled-color !important
-
-    &::before, &::after
-      display: none
-
-    & > i
-      &::before, &::after
-        border-color: $btn-disabled-color !important
-
-/* btn-default-alt end
-
-/* btn-with-icon
-.btn-with-icon
-  $btni-space: 10px
-  //=================
-  text-align: center
-  +clear-spacing
-  white-space: nowrap
-
-  svg, span
-    +display-inline-block-middle
-
-  path
-    fill: currentColor
-
-  span
-    text-align: left
-    white-space: normal
-    padding-right: $btni-space
-
-  svg + span
-    padding-right: 0
-    padding-left: $btni-space
-
-/* btn-with-icon end
-
-/* btn-with-arrow
-.btn-with-arrow
-  $arrow-width: 26px
-  $arrow-space: 10px
-
-  & > i, & > span
-    +display-inline-block-middle
-
-  & > i
-    position: relative
-    margin-right: $arrow-space
-    +font(0, 0)
-    +size($arrow-width, 18px)
-
-    &::before, &::after
-      +pseudo()
-      +position(50%)
-      border: 0 solid $btn-text-color
-      transform: none
-
-    &::before
-      +size(26px, 2px)
-      border-top-width: 2px
-      margin: -1px 0 0 round(-$arrow-width/2)
-
-    &::after
-      top: 0
-      +size(12px)
-      border-width: 2px 0 0 2px
-      transform: rotate(-45deg)
-      margin: 3px 0 0 round(-$arrow-width/2)
-
-  & > span
-    text-align: left
-    white-space: normal
-    max-width: calc(100% - #{$arrow-width} - #{$arrow-space})
-
-    & ~ i
-      margin-right: 0
-      margin-left: $arrow-space
-
-      &::after
-        border-width: 0 2px 2px 0
-        margin: 3px 0 0 1px
-
-  // alt button
-  &.btn-default-alt
-
-    & > i
-      &::before, &::after
-        border-color: $btn-bg-color
-
-  // hover
-  .no-touchevents &.btn-default-alt:hover
-
-    & > i
-
-      &::before, &::after
-        border-color: $btn-text-color
-
-/* btn-with-arrow end
-
-/* button popup close
-.btn-popup-close
-  //<a href="#" class="btn-popup-close js-btn-menu-close"><i></i><span>Закрыть</span></a>
-  $btn-bg: #f3f3f3
-  $btn-color: $text-color
-  $btn-size: 60px
-  $btn-space: 12px
-  $btn-lines-width: 20px
-  $btn-lines-height: 3px
-  $btn-lines-space: 5px
-  $btn-lines-color: $text-color
-
-  =line-style()
-    +size($btn-lines-width, $btn-lines-height)
-    border-radius: 2px
-
-  display: block
-  +size($btn-size)
-  background: $btn-bg
-  color: white
+  text-transform: uppercase
   text-decoration: none
-  +clear-spacing
-  white-space: nowrap
-  transition-property: background-color, opacity, visibility
-  transition-duration: $animation-speed
+  text-align: center
+  cursor: pointer // Для input-елементов
+  border: $btn-border-width solid $btn-bg-color
+  background-color: white
+  box-shadow: none
+  user-select: none
+  -webkit-tap-highlight-color: transparent
 
-  +media('<mob')
-    +size(45px)
+  &, & > span
+    +font-size($btn-font-size, $btn-line-height)
+    letter-spacing: $btn-letter-spacing
 
-  &::before
-    content: ''
-    display: inline-block
-    height: $btn-size
-    min-height: 100%
-    vertical-align: middle
+  // Hover
+  &:hover
+    .no-touchevents &
+      color: $btn-text-color
+      background-color: $btn-bg-color
 
-  > span
-    +hide-text
+  // Disabled
+  &:disabled, &.disabled, &[data-disabled]
+    +btn-disabled()
 
-  > i
-    display: inline-block
-    vertical-align: middle
-    position: relative
-    backface-visibility: hidden
-    background-color: transparent
-    +line-style
-
-    &::before, &::after
-      +pseudo()
-      left: 0
-      backface-visibility: hidden
-      +line-style
-      background: $btn-lines-color
-      transition-property: background-color
-      transition-duration: $animation-speed
-
-    //first line menu
-    &::before
-      top: 0
-      transform: rotate(-45deg)
-
-    //third line menu
-    &::after
-      top: 0
-      transform: rotate(45deg)
-
-  .no-touchevents &:hover
-    background-color: $mark-color
-
-/* button popup close end
+/* btn-alt end
