--- a/src/sass/base/_oldie.sass
+++ b/src/sass/base/_oldie.sass
@@ -15,7 +15,7 @@
   width: 100%
   padding: 0.2em 0
   margin: 0
-  +font(28px, 42px)
+  +font-size(28px, 42px)
   color: #000
   background: #ccc
   z-index: 99999
