--- a/src/sass/components/_bitrix-search.sass
+++ b/src/sass/components/_bitrix-search.sass
@@ -14,7 +14,7 @@
       display: none
 
   .p-nav-title
-    +font(2.0rem, 1.4)
+    +font-size(2.0rem, 1.4)
     +font-alt-bold
     margin-bottom: $bottom-space
 
