--- a/src/sass/components/_doc-list.sass
+++ b/src/sass/components/_doc-list.sass
@@ -8,7 +8,7 @@
   +display-inline-block-top
   min-height: $file-icon-size
   padding: 0.5em
-  +font(16px, 20px)
+  +font-size(16px, 20px)
   color: $text-color
   text-decoration: none
 
