--- a/src/sass/components/_user-form.sass
+++ b/src/sass/components/_user-form.sass
@@ -23,10 +23,6 @@
   form
     display: block
 
-  .input-wrap
-    &:last-child
-      margin-bottom: 0
-
   textarea
     height: 130px
     max-height: 130px
@@ -65,7 +61,7 @@
     display: inline-block
     vertical-align: middle
     width: calc(100% - 6px)
-    +font($font-size, $line-height)
+    +font-size($font-size, $line-height)
     letter-spacing: $letter-spacing
 
 /* user form end
