--- a/src/sass/forms/_forms.sass
+++ b/src/sass/forms/_forms.sass
@@ -6,7 +6,7 @@
 label
   display: inline-block
   vertical-align: top
-  +font($font-size, $line-height)
+  +font-size($font-size, $line-height)
   color: $text-color-light
   margin-bottom: 0.5em
   user-select: none
@@ -16,7 +16,7 @@ label
     background: none
     color: $error-color
 
-// Input Fields:
+// .form-def:
 // input[type="text"]
 // input[type="password"]
 // input[type="email"]
@@ -24,6 +24,7 @@ label
 // textarea
 
 .form-def
+  $form-def: &
   display: block
   padding: $form-input-space-vt $form-input-space-h $form-input-space-vb
   width: 100%
@@ -32,95 +33,93 @@ label
   box-shadow: none
   border: $form-border-width solid $form-border-color
   cursor: pointer
-
   // Стили для текста
   +inputs-font
-
   // Вертикальные внешние отступы
   +forms-space
+
+  // Textarea
+  @at-root
+    textarea#{$form-def}
+      $lines: 2
+      $height: round($form-line-height*$lines) + $form-input-space-vt + $form-input-space-vb + round($form-border-width*2)
+      min-height: $height
+      height: $height
+      resize: vertical
 
   // Последний элемент в списке
   &:last-child
     margin-bottom: 0
 
-textarea
-  $lines: 2
-  $height: round($form-line-height*$lines) + $form-input-space-vt + $form-input-space-vb + round($form-border-width*2)
-  min-height: $height
-  height: $height
-  resize: vertical
-
-// Placeholder
-input, textarea
+  // Placeholder
   +placeholder
     color: $form-placeholder-color
     transition: $animation-speed opacity
 
-  //form placeholder hide on focus
+  // Placeholder hide on focus
   +placeholder-focus
     opacity: 0
 
-// States
-.form-def
-  &[disabled]
-    cursor: default
-    color: $form-text-color--disabled
-    background-color: $form-bg-color--disabled
-    border-color: $form-border-color--disabled
-
-    +placeholder
-      color: $form-text-color--disabled
-
+  // Focus
   &:focus
     cursor: text
+    border-color: $form-border-color--focus
 
-  &:not([disabled]):not(.error):not(.success):not(.filled)
-    //form hover
-    &:hover
-      border-color: $form-border-color--focus
+  // Hover
+  &:hover
+    border-color: $form-border-color--focus
 
-    //form focus
-    &:focus
-      border-color: $form-border-color--focus
-
-  // has value (js)
-  //style for label
-  @at-root label
-    &.filled
-      +form-has-value
-
-  &.filled:not([disabled])
-    +form-has-value
-
-  // on focus (js)
+  // Focus (js classes)
   &.focused
-    +form-on-focus
+    +focused
 
-  //form success
-  //style for label
-  @at-root label
-    &.success
-      +form-success
+  // Has value (js classes)
+  // Label
+  @at-root
+    label
+      &.filled
+        +filled
 
-  &.success:not([disabled])
+  &.filled
+    +filled
+
+  // Success
+  @at-root
+    label
+      &.success
+        +form-success
+
+  &.success
     +form-success
 
-    //form success placeholder
+    // Placeholder
     +placeholder
       color: $form-success-color
 
-  //form error
+  // Error
   @at-root label
     &.error
       +form-error
 
-  &.error:not([disabled])
+  &.error
     +form-error
 
-    //form error placeholder
+    // Placeholder
     +placeholder
       color: $form-error-color
 
+  // Disabled
+  &[disabled]
+    cursor: default !important
+    color: $form-text-color--disabled !important
+    background-color: $form-bg-color--disabled !important
+    border-color: $form-border-color--disabled !important
+    box-shadow: none !important
+
+    +placeholder
+      color: $form-text-color--disabled !important
+
+@import unit
 @import group
 @import checkboxes
 @import select
