--- a/src/css/main.css
+++ b/src/css/main.css
@@ -503,75 +503,75 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover,
   text-decoration: underline;
 }
 
-h1 {
+h1, .h1 {
   font-weight: normal;
   font-size: 4.2rem;
   line-height: 5.2rem;
 }
 
 @media (max-width: 991px) {
-  h1 {
+  h1, .h1 {
     font-size: 3.4rem;
     line-height: 4.2rem;
   }
 }
 
 @media (max-width: 639px) {
-  h1 {
+  h1, .h1 {
     font-size: 3rem;
     line-height: 3.7rem;
   }
 }
 
-h2 {
+h2, .h2 {
   font-size: 3rem;
   line-height: 4.2rem;
 }
 
 @media (max-width: 991px) {
-  h2 {
+  h2, .h2 {
     font-size: 2.8rem;
     line-height: 3.9rem;
   }
 }
 
 @media (max-width: 639px) {
-  h2 {
+  h2, .h2 {
     font-size: 2.4rem;
     line-height: 3.4rem;
   }
 }
 
-h3 {
+h3, .h3 {
   font-size: 2.4rem;
   line-height: 3rem;
 }
 
 @media (max-width: 991px) {
-  h3 {
+  h3, .h3 {
     font-size: 2.2rem;
     line-height: 2.8rem;
   }
 }
 
 @media (max-width: 639px) {
-  h3 {
+  h3, .h3 {
     font-size: 1.8rem;
     line-height: 2.3rem;
   }
 }
 
-h4 {
+h4, .h4 {
   font-size: 1.6rem;
   line-height: 2.4rem;
 }
 
-h5 {
+h5, .h5 {
   font-size: 1.6rem;
   line-height: 2.4rem;
 }
 
-h6 {
+h6, .h6 {
   font-size: 1.6rem;
   line-height: 2.4rem;
   text-transform: uppercase;
