--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -27,25 +27,26 @@ h1, h2, h3, h4, h5, h6,
       color: $link-color
       text-decoration: underline
 
-h1
+h1, .h1
   font-weight: normal
   +font-h1
 
-h2
+h2, .h2
   +font-h2
 
-h3
+h3, .h3
   +font-h3
 
-h4
+h4, .h4
   +font-size($font-size-h4, $line-height-h4)
 
-h5
+h5, .h5
   +font-size($font-size-h5, $line-height-h5)
 
-h6
+h6, .h6
   +font-size($font-size-h6, $line-height-h6)
   text-transform: uppercase
+
 
 p
   padding: 0
