layout text отступы

--- a/src/sass/base/_layout.sass
+++ b/src/sass/base/_layout.sass
@@ -35,9 +35,9 @@ body
   +push-auto
 
 // Отступы по бокам текстовых элементов
-@if nth($layout-page-space, 2) != 0
+@if nth($layout-text-space, 2) != 0
   .layout-text-spaces
-    +padding-horizontal(nth($layout-page-space, 2))
+    +padding-horizontal(nth($layout-text-space, 2))
 
 // Выравнивание текстовых элементов и их максимальная ширина
 .layout-text
