Прижать футер, запретить сжимание футера и шапки

--- a/src/sass/base/_layout.sass
+++ b/src/sass/base/_layout.sass
@@ -57,8 +57,12 @@ body
   display: flex
   flex-direction: column
 
+.header
+  flex-shrink: 0
+
 .main
   flex-shrink: 0
 
 .footer
+  flex-shrink: 0
   margin-top: auto
